--- a/action.html
+++ b/action.html
@@ -105,7 +105,7 @@
                                 </button>
                             </div>
                             <div class="dropdown-content__right" id="dropdownContentR">
-                                <button class="dropdown-content-right-back">
+                                <button class="dropdown-content-right-back" onclick="backDropdownContent()">
                                     <img class="dropdown-content-right-back-icon" src="images/arrow-back.svg"
                                         alt="back">
                                     <span class="dropdown-content-right-back-text">Назад</span>
@@ -169,102 +169,122 @@
                 Здесь представлены актуальные акции онлайн-школ, следите за обновлениями данного раздела.
             </p>
             <div class="action__cards">
+
                 <div class="action__card">
-                    <div class="action__card-logo">
-                        <a href="#">
-                            <img src="images/card-logo.png" alt="card-logo">
-                        </a>
+                    <div class="action__card-logo-wrapper">
+                        <div class="action__card-logo">
+                            <a href="#">
+                                <img src="images/card-logo.png" alt="card-logo">
+                            </a>
+                        </div>
                     </div>
-                    <!-- <div class="action__card-wrapper"> -->
-                    <div class="action__card-title">
-                        СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
-                    </div>
-                    <div class="action__card-coursator">COURSATOR</div>
-                    <div class="action__card-bottom">
-                        <a class="action__card-link" href="">skillfactory.ru</a>
-                        <span class="action__card-text">Акция действует до 28 февраля</span>
+                    <div class="action__card-inner">
+                        <div class="action__card-title">
+                            СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
+                        </div>
+                        <div class="action__card-coursator">COURSATOR</div>
+                        <div class="action__card-bottom">
+                            <a class="action__card-link" href="">skillfactory.ru</a>
+                            <span class="action__card-text">Акция действует до 28 февраля</span>
+                        </div>
                     </div>
                 </div>
                 <div class="action__card">
-                    <div class="action__card-logo">
-                        <a href="#">
-                            <img src="images/card-logo.png" alt="card-logo">
-                        </a>
+                    <div class="action__card-logo-wrapper">
+                        <div class="action__card-logo">
+                            <a href="#">
+                                <img src="images/card-logo.png" alt="card-logo">
+                            </a>
+                        </div>
                     </div>
-                    <!-- <div class="action__card-wrapper"> -->
-                    <div class="action__card-title">
-                        СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
-                    </div>
-                    <div class="action__card-coursator">COURSATOR</div>
-                    <div class="action__card-bottom">
-                        <a class="action__card-link" href="">skillfactory.ru</a>
-                        <span class="action__card-text">Акция действует до 28 февраля</span>
-                    </div>
-                </div>
-                <div class="action__card">
-                    <div class="action__card-logo">
-                        <a href="#">
-                            <img src="images/card-logo.png" alt="card-logo">
-                        </a>
-                    </div>
-                    <!-- <div class="action__card-wrapper"> -->
-                    <div class="action__card-title">
-                        СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
-                    </div>
-                    <div class="action__card-coursator">COURSATOR</div>
-                    <div class="action__card-bottom">
-                        <a class="action__card-link" href="">skillfactory.ru</a>
-                        <span class="action__card-text">Акция действует до 28 февраля</span>
+                    <div class="action__card-inner">
+                        <div class="action__card-title">
+                            СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
+                        </div>
+                        <div class="action__card-coursator">COURSATOR</div>
+                        <div class="action__card-bottom">
+                            <a class="action__card-link" href="">skillfactory.ru</a>
+                            <span class="action__card-text">Акция действует до 28 февраля</span>
+                        </div>
                     </div>
                 </div>
                 <div class="action__card">
-                    <div class="action__card-logo">
-                        <a href="#">
-                            <img src="images/card-logo.png" alt="card-logo">
-                        </a>
+                    <div class="action__card-logo-wrapper">
+                        <div class="action__card-logo">
+                            <a href="#">
+                                <img src="images/card-logo.png" alt="card-logo">
+                            </a>
+                        </div>
                     </div>
-                    <!-- <div class="action__card-wrapper"> -->
-                    <div class="action__card-title">
-                        СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
-                    </div>
-                    <div class="action__card-coursator">COURSATOR</div>
-                    <div class="action__card-bottom">
-                        <a class="action__card-link" href="">skillfactory.ru</a>
-                        <span class="action__card-text">Акция действует до 28 февраля</span>
-                    </div>
-                </div>
-                <div class="action__card">
-                    <div class="action__card-logo">
-                        <a href="#">
-                            <img src="images/card-logo.png" alt="card-logo">
-                        </a>
-                    </div>
-                    <!-- <div class="action__card-wrapper"> -->
-                    <div class="action__card-title">
-                        СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
-                    </div>
-                    <div class="action__card-coursator">COURSATOR</div>
-                    <div class="action__card-bottom">
-                        <a class="action__card-link" href="">skillfactory.ru</a>
-                        <span class="action__card-text">Акция действует до 28 февраля</span>
+                    <div class="action__card-inner">
+                        <div class="action__card-title">
+                            СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
+                        </div>
+                        <div class="action__card-coursator">COURSATOR</div>
+                        <div class="action__card-bottom">
+                            <a class="action__card-link" href="">skillfactory.ru</a>
+                            <span class="action__card-text">Акция действует до 28 февраля</span>
+                        </div>
                     </div>
                 </div>
                 <div class="action__card">
-                    <div class="action__card-logo">
-                        <a href="#">
-                            <img src="images/card-logo.png" alt="card-logo">
-                        </a>
+                    <div class="action__card-logo-wrapper">
+                        <div class="action__card-logo">
+                            <a href="#">
+                                <img src="images/card-logo.png" alt="card-logo">
+                            </a>
+                        </div>
                     </div>
-                    <!-- <div class="action__card-wrapper"> -->
-                    <div class="action__card-title">
-                        СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
-                    </div>
-                    <div class="action__card-coursator">COURSATOR</div>
-                    <div class="action__card-bottom">
-                        <a class="action__card-link" href="">skillfactory.ru</a>
-                        <span class="action__card-text">Акция действует до 28 февраля</span>
+                    <div class="action__card-inner">
+                        <div class="action__card-title">
+                            СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
+                        </div>
+                        <div class="action__card-coursator">COURSATOR</div>
+                        <div class="action__card-bottom">
+                            <a class="action__card-link" href="">skillfactory.ru</a>
+                            <span class="action__card-text">Акция действует до 28 февраля</span>
+                        </div>
                     </div>
                 </div>
+                <div class="action__card">
+                    <div class="action__card-logo-wrapper">
+                        <div class="action__card-logo">
+                            <a href="#">
+                                <img src="images/card-logo.png" alt="card-logo">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="action__card-inner">
+                        <div class="action__card-title">
+                            СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
+                        </div>
+                        <div class="action__card-coursator">COURSATOR</div>
+                        <div class="action__card-bottom">
+                            <a class="action__card-link" href="">skillfactory.ru</a>
+                            <span class="action__card-text">Акция действует до 28 февраля</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="action__card">
+                    <div class="action__card-logo-wrapper">
+                        <div class="action__card-logo">
+                            <a href="#">
+                                <img src="images/card-logo.png" alt="card-logo">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="action__card-inner">
+                        <div class="action__card-title">
+                            СКИДКА 45% НА ВСЕ КУРСЫ ПО ПРОМОКОДУ
+                        </div>
+                        <div class="action__card-coursator">COURSATOR</div>
+                        <div class="action__card-bottom">
+                            <a class="action__card-link" href="">skillfactory.ru</a>
+                            <span class="action__card-text">Акция действует до 28 февраля</span>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
         </div>
