--- a/coursesPage.html
+++ b/coursesPage.html
@@ -105,7 +105,7 @@
                                 </button>
                             </div>
                             <div class="dropdown-content__right" id="dropdownContentR">
-                                <button class="dropdown-content-right-back">
+                                <button class="dropdown-content-right-back" onclick="backDropdownContent()">
                                     <img class="dropdown-content-right-back-icon" src="images/arrow-back.svg"
                                         alt="back">
                                     <span class="dropdown-content-right-back-text">Назад</span>
@@ -166,34 +166,38 @@
                 </div>
                 <div class="test-block__wrapper">
                     <div class="text-block">
-                        <div class="text-block__content">
-                            <p class="text-block__point">
-                                <span>Используйте промокод BOXBERRY, чтобы получить скидку 45% на любые курсы этой школы
-                                    (не суммируется со скидкой на сайте школы)
-                                </span>
-                            </p>
-                            <p class="text-block__point">
-                                <span>Начало:</span>07.03.2022
-                            </p>
-                            <p class="text-block__point">
-                                <span>Длительность:</span> 12 месяца
-                            </p>
-                            <p class="text-block__point">
-                                <span>Занятия:</span>около 8 часов в неделю
-                            </p>
-                            <p class="text-block__point">
-                                <span>Формат:</span> занятия с менторами в прямом эфире, домашние задания с обратной
-                                связью от преподавателей
-                            </p>
+                        <div class="text-block__wrapper">
+                            <div class="text-block__content">
+                                <p class="text-block__point">
+                                    <span>Используйте промокод BOXBERRY, чтобы получить скидку 45% на любые курсы этой
+                                        школы
+                                        (не суммируется со скидкой на сайте школы)
+                                    </span>
+                                </p>
+                                <p class="text-block__point">
+                                    <span>Начало:</span>07.03.2022
+                                </p>
+                                <p class="text-block__point">
+                                    <span>Длительность:</span> 12 месяца
+                                </p>
+                                <p class="text-block__point">
+                                    <span>Занятия:</span>около 8 часов в неделю
+                                </p>
+                                <p class="text-block__point">
+                                    <span>Формат:</span> занятия с менторами в прямом эфире, домашние задания с обратной
+                                    связью от преподавателей
+                                </p>
+                            </div>
+                            <div class="content__box-top rating__box">
+                                <img src="images/star.svg" alt="star">
+                                <a class="content__box-rating" href="">4</a>
+                                <a class="content__box-reviews" href="">(19)</a>
+                            </div>
                         </div>
-                        <div class="content__box-top rating__box">
-                            <img src="images/star.svg" alt="star">
-                            <a class="content__box-rating" href="">4</a>
-                            <a class="content__box-reviews" href="">(19)</a>
-                        </div>
-                        <button class="btn">Курс на skillfactory.ru</button>
+                        <a href="" class="text-block__link">Курс на skillfactory.ru</a>
                     </div>
                 </div>
+
                 <h2 class="title">
                     Похожие курсы
                 </h2>
