--- a/reviews.html
+++ b/reviews.html
@@ -105,7 +105,7 @@
                                 </button>
                             </div>
                             <div class="dropdown-content__right" id="dropdownContentR">
-                                <button class="dropdown-content-right-back">
+                                <button class="dropdown-content-right-back" onclick="backDropdownContent()">
                                     <img class="dropdown-content-right-back-icon" src="images/arrow-back.svg"
                                         alt="back">
                                     <span class="dropdown-content-right-back-text">Назад</span>
@@ -212,13 +212,13 @@
                             </div>
                             <div class="reviews__content-count">
                                 <button class="reviews__content-btn">
-                                    <span>4</span>
+                                    <span class="reviews__content-btn-num">4</span>
                                     <img src="images/like.svg" alt="like">
 
                                 </button>
                                 <button class="reviews__content-btn">
-                                    <span>1</span>
-                                    <img src="images/dislike.svg" alt="like">
+                                    <span class="reviews__content-btn-num">1</span>
+                                    <img src="images/dislike.svg" alt="dislike">
                                 </button>
                             </div>
                         </div>
@@ -254,13 +254,13 @@
                             </div>
                             <div class="reviews__content-count">
                                 <button class="reviews__content-btn">
-                                    <span>4</span>
+                                    <span class="reviews__content-btn-num">4</span>
                                     <img src="images/like.svg" alt="like">
 
                                 </button>
                                 <button class="reviews__content-btn">
-                                    <span>1</span>
-                                    <img src="images/dislike.svg" alt="like">
+                                    <span class="reviews__content-btn-num">1</span>
+                                    <img src="images/dislike.svg" alt="dislike">
                                 </button>
                             </div>
                         </div>
@@ -296,13 +296,13 @@
                             </div>
                             <div class="reviews__content-count">
                                 <button class="reviews__content-btn">
-                                    <span>4</span>
+                                    <span class="reviews__content-btn-num">4</span>
                                     <img src="images/like.svg" alt="like">
 
                                 </button>
                                 <button class="reviews__content-btn">
-                                    <span>1</span>
-                                    <img src="images/dislike.svg" alt="like">
+                                    <span class="reviews__content-btn-num">1</span>
+                                    <img src="images/dislike.svg" alt="dislike">
                                 </button>
                             </div>
                         </div>
