--- a/reviews2.html
+++ b/reviews2.html
@@ -105,7 +105,7 @@
                                 </button>
                             </div>
                             <div class="dropdown-content__right" id="dropdownContentR">
-                                <button class="dropdown-content-right-back">
+                                <button class="dropdown-content-right-back" onclick="backDropdownContent()">
                                     <img class="dropdown-content-right-back-icon" src="images/arrow-back.svg"
                                         alt="back">
                                     <span class="dropdown-content-right-back-text">Назад</span>
@@ -172,11 +172,11 @@
         </div>
         <div class="reviews__content">
             <div class="container">
-                <div class="reviews__content-wrapper">
+                <div class="reviews__content-wrapper reviews__school">
                     <div class="reviews__content-item">
                         <div class="reviews__content-in">
                             <div class="reviews__content-left">
-                                <a href="">
+                                <a class="reviews__content-left-logo" href="">
                                     <img src="images/school-skill.png" alt="school">
                                 </a>
                                 <div class="content__box-top">
@@ -202,7 +202,7 @@
                     <div class="reviews__content-item">
                         <div class="reviews__content-in">
                             <div class="reviews__content-left">
-                                <a href="">
+                                <a class="reviews__content-left-logo" href="">
                                     <img src="images/school-skill.png" alt="school">
                                 </a>
                                 <div class="content__box-top">
@@ -228,7 +228,7 @@
                     <div class="reviews__content-item">
                         <div class="reviews__content-in">
                             <div class="reviews__content-left">
-                                <a href="">
+                                <a class="reviews__content-left-logo" href="">
                                     <img src="images/school-skill.png" alt="school">
                                 </a>
                                 <div class="content__box-top">
@@ -254,7 +254,7 @@
                     <div class="reviews__content-item">
                         <div class="reviews__content-in">
                             <div class="reviews__content-left">
-                                <a href="">
+                                <a class="reviews__content-left-logo" href="">
                                     <img src="images/school-skill.png" alt="school">
                                 </a>
                                 <div class="content__box-top">
