--- a/testPage2.html
+++ b/testPage2.html
@@ -105,7 +105,7 @@
                                 </button>
                             </div>
                             <div class="dropdown-content__right" id="dropdownContentR">
-                                <button class="dropdown-content-right-back">
+                                <button class="dropdown-content-right-back" onclick="backDropdownContent()">
                                     <img class="dropdown-content-right-back-icon" src="images/arrow-back.svg"
                                         alt="back">
                                     <span class="dropdown-content-right-back-text">Назад</span>
